src/test/deca/context/valid/class_decl_multiline_asm_method.deca
/*
    Description: Declaration d'une methode asm comportant plusieurs lignes dans une classe

    Résultat : OK
*/
class A{
    void x () asm("aaa
         bbb
            ccc
                ddd");
}
